fixed access denied for unregistered users response added get object tests refactoring